fix: fix charts' cutting off

--- a/public/css/reports/style.scss
+++ b/public/css/reports/style.scss
@@ -60,8 +60,8 @@ main {
 
     & .report-wrapper {
       overflow: auto;
-      margin-top: 20px;
-      margin-bottom: 50px;
+      padding-top: 20px;
+      padding-bottom: 50px;
 
       // & table {
       //   width: 100%;
